--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-!
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 
@@ -10,58 +9,104 @@
 <body>
 
   <script type="text/javascript">
-    function getRndInteger(min, max) {
-      return Math.floor(Math.random() * (2 - 0));
+    var roundWinner = '' ;
+
+    function getRandomInt(max) {
+      return Math.floor(Math.random() * Math.floor(max));
     }
-    function computerPlay{
-      switch(getRndInteger) {
-    case 0:
-      return 'rock';
-      break;
-    case 1:
-      return 'paper';
-      break;
-    case 2:
-      return 'scissors';
+
+    function computerPlay(){
+      switch (getRandomInt(3)) {
+        case 0:
+          return 'rock';
+          break;
+        case 1:
+          return 'paper';
+          break;
+        case 2:
+          return 'scissors';
+          break;
+      }
+    }
+
+    function getInput(){
+      var choice = prompt('What do you choose? Rock, paper, or scissors?');
+
+      if (choice != null){
+      choice = choice.toLowerCase();
+
+      if (choice === 'rock' || 'paper' || 'scissors') {
+        return choice;
+      } else console.log('Error! Please choose either rock, paper or scissors.');
+    }
   }
-    }
 
-function getInput{
-  console.log('What do you choose? Rock, paper, or scissors?');
-  
-}
+    function playRound(playerSelection, computerSelection) {
 
-    function playRound(playerSelection, computerSelection){
-/*draw case*/
-      if playerSelection == computerSelection return 'It\'s a draw!';
-/*player wins*/
-      if(playerSelection == 'rock' && computerSelection == 'scissors'){
+      playerSelection = getInput();
+      computerSelection = computerPlay();
+
+      /*draw case*/
+      if (playerSelection == computerSelection){
+      return 'It\'s a draw!';}
+      /*player wins*/
+      if (playerSelection == 'rock' && computerSelection == 'scissors') {
+        roundWinner = 'player';
         return 'You Win! Rock beats Scissors';
       }
 
-      if(playerSelection == 'scissors' && computerSelection == 'paper'){
+      if (playerSelection == 'scissors' && computerSelection == 'paper') {
+        roundWinner = 'player';
         return 'You Win! Scissors beat Paper';
       }
 
-      if(playerSelection == 'paper' && computerSelection == 'rock'){
-      return 'You Win! Paper beats Rock';
+      if (playerSelection == 'paper' && computerSelection == 'rock') {
+        roundWinner = 'player';
+        return 'You Win! Paper beats Rock';
       }
-/*player loses*/
-      if(computerSelection == 'rock' && playerSelection == 'scissors'){
+      /*player loses*/
+      if (computerSelection == 'rock' && playerSelection == 'scissors') {
+        roundWinner = 'computer';
         return 'You Lose! Rock beats Scissors';
       }
 
-      if(computerSelection == 'scissors' && playerSelection == 'paper'){
+      if (computerSelection == 'scissors' && playerSelection == 'paper') {
+        roundWinner = 'computer';
         return 'You Lose! Scissors beat Paper';
       }
 
-      if(computerSelection == 'paper' && playerSelection == 'rock'){
-      return 'You Lose! Paper beats Rock';
+      if (computerSelection == 'paper' && playerSelection == 'rock') {
+        roundWinner = 'computer';
+        return 'You Lose! Paper beats Rock';
+      }
+    }
+
+    function game() {
+      /**Initializing counter for round wins**/
+      var scorePlayer = 0;
+      var scoreComputer = 0;
+      /**Playing through 5 rounds and recording wins**/
+      while (i = 1, 1 < 6, i++) {
+      console.log('Round ' + i +':');
+      playRound();
+      if (roundWinner == 'player') {
+        scorePlayer+=scorePlayer;
+      }
+      if (roundWinner == 'computer') {
+        scoreComputer+=scoreComputer;
       }
 
-
-
     }
+    if (scorePlayer == scoreComputer) {
+      console.log('The game is drawn!');
+    } else if (scorePlayer > scoreComputer) {
+      console.log('Congratulations, you win the game!');
+    } else {
+      console.log('Unlucky, you lost the game!');
+    }
+    }
+
+    game();
   </script>
 
 </body>
