Rounds now progress properly

--- a/index.html
+++ b/index.html
@@ -9,46 +9,45 @@
 <body>
 
   <script type="text/javascript">
-    var roundWinner = '' ;
+    const choiceArray = ["Rock", "Paper", "Scissors"];
+    var roundWinner = '';
 
     function getRandomInt(max) {
       return Math.floor(Math.random() * Math.floor(max));
     }
 
-    function computerPlay(){
-      switch (getRandomInt(3)) {
-        case 0:
-          return 'rock';
+
+    const computerChoices = ["Rock", "Paper", "Scissors"];
+    function computerPlay() {
+      return choiceArray[~~(Math.random() * computerChoices.length)];
+    }
+
+    function getInput() {
+      var choice = prompt('What do you choose? Rock, paper, or scissors?');
+
+      switch (choice) {
+
+        default:
+          choice = choice.toLowerCase();
+          if (choice === 'rock' || 'paper' || 'scissors') {
+            return choice;
+          } else console.log('Error! Please choose either rock, paper or scissors.');
           break;
-        case 1:
-          return 'paper';
-          break;
-        case 2:
-          return 'scissors';
+
+        case null:
           break;
       }
     }
 
-    function getInput(){
-      var choice = prompt('What do you choose? Rock, paper, or scissors?');
-
-      if (choice != null){
-      choice = choice.toLowerCase();
-
-      if (choice === 'rock' || 'paper' || 'scissors') {
-        return choice;
-      } else console.log('Error! Please choose either rock, paper or scissors.');
-    }
-  }
-
     function playRound(playerSelection, computerSelection) {
 
-      playerSelection = getInput();
-      computerSelection = computerPlay();
+      playerSelection = getInput().toLowerCase();
+      computerSelection = computerPlay().toLowerCase();
 
       /*draw case*/
-      if (playerSelection == computerSelection){
-      return 'It\'s a draw!';}
+      if (playerSelection == computerSelection) {
+        return 'It\'s a draw!';
+      }
       /*player wins*/
       if (playerSelection == 'rock' && computerSelection == 'scissors') {
         roundWinner = 'player';
@@ -85,25 +84,26 @@
       /**Initializing counter for round wins**/
       var scorePlayer = 0;
       var scoreComputer = 0;
+      var roundNumber = 1;
       /**Playing through 5 rounds and recording wins**/
-      while (i = 1, 1 < 6, i++) {
-      console.log('Round ' + i +':');
-      playRound();
-      if (roundWinner == 'player') {
-        scorePlayer+=scorePlayer;
+      while (roundNumber < 6) {
+        console.log('Round ' + roundNumber + ':');
+        playRound();
+        if (roundWinner == 'player') {
+          scorePlayer += scorePlayer;
+        }
+        if (roundWinner == 'computer') {
+          scoreComputer += scoreComputer;
+        }
+        roundNumber++;
       }
-      if (roundWinner == 'computer') {
-        scoreComputer+=scoreComputer;
+      if (scorePlayer == scoreComputer) {
+        console.log('The game is drawn!');
+      } else if (scorePlayer > scoreComputer) {
+        console.log('Congratulations, you win the game!');
+      } else {
+        console.log('Unlucky, you lost the game!');
       }
-
-    }
-    if (scorePlayer == scoreComputer) {
-      console.log('The game is drawn!');
-    } else if (scorePlayer > scoreComputer) {
-      console.log('Congratulations, you win the game!');
-    } else {
-      console.log('Unlucky, you lost the game!');
-    }
     }
 
     game();
